--- a/libs/llecoop/order-list/feature/user-order-list/project.json
+++ b/libs/llecoop/order-list/feature/user-order-list/project.json
@@ -4,16 +4,11 @@
   "sourceRoot": "libs/llecoop/order-list/feature/user-order-list/src",
   "prefix": "plastik",
   "projectType": "library",
-  "tags": [
-    "type:feature",
-    "scope:llecoop"
-  ],
+  "tags": ["type:feature", "scope:llecoop"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/llecoop/order-list/feature/user-order-list/jest.config.ts"
       }
