--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,4 @@ jobs:
       - run: npx nx affected -t lint --exclude=llecoop-firebase
       - run: npx nx affected -t test --exclude=llecoop-firebase
 
-      - run: npx nx affected --parallel 1 -t e2e-ci
+      - run: yarn e2e:ci
