--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,28 +17,33 @@ jobs:
         with:
           fetch-depth: 0
 
-      # This enables task distribution via Nx Cloud
-      # Run this command as early as possible, before dependencies are installed
-      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      - run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
+      # Start Nx Cloud agents for distributed task execution
+      - name: Start Nx Cloud CI Run
+        run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
 
-      # Cache node_modules
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'yarn'
 
-      # Install dependencies
-      - run: yarn install --immutable --network-timeout 1000000
+      - name: Install dependencies
+        run: yarn install --immutable --network-timeout 1000000
+
       - uses: nrwl/nx-set-shas@v4
 
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: npx nx-cloud record -- echo Hello World
-      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      - run: npx nx-cloud record -- yarn markdownlint
+      # Run linting in parallel
+      - name: Lint
+        run: yarn nx affected --target=lint --parallel=true --maxParallel=3
 
-      # Run affected lint and test for other projects
-      - run: npx nx affected -t lint --exclude=llecoop-firebase
-      - run: npx nx affected -t test --exclude=llecoop-firebase
+      # Run tests in parallel
+      - name: Test
+        run: yarn nx affected --target=test --parallel=true --maxParallel=3
 
-      - run: yarn e2e:ci
+      # Run e2e tests in parallel using Nx Cloud agents
+      - name: E2E Tests
+        run: yarn nx affected --target=e2e-ci --parallel=true --maxParallel=3
+
+      # Stop Nx Cloud agents (this will happen automatically, but explicit is better)
+      - name: Stop Nx Cloud agents
+        if: always()
+        run: npx nx-cloud stop-all-agents
