--- a/nx.json
+++ b/nx.json
@@ -6,6 +6,16 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
+    "@angular-devkit/build-angular:browser": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    },
+    "build": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    },
     "@nx/eslint:lint": {
       "cache": true,
       "inputs": [
