--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -94,9 +94,10 @@
       }
     },
     "serve-static": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/web:file-server",
       "options": {
-        "command": "npx http-server dist/apps/nasa-images --cors -p 4201"
+        "buildTarget": "nasa-images:build",
+        "port": 4202
       }
     }
   }
