--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,13 @@
-name: Plastikspace ci
-
-env:
-  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
-
+name: CI
 on:
   push:
     branches:
       - develop
+
+# Needed for nx-set-shas when run on the main branch
+permissions:
+  actions: read
+  contents: read
 
 jobs:
   develop:
@@ -16,40 +17,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      # Start Nx Cloud agents for distributed task execution
-      - name: Start Nx Cloud CI Run
-        run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'yarn'
 
-      - name: Install dependencies
-        run: yarn install --immutable --network-timeout 1000000
+      - run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="build"
+      - run: yarn install --immutable --network-timeout 1000000
 
       - uses: nrwl/nx-set-shas@v4
 
-      # Run linting in parallel
-      - name: Lint
-        run: yarn nx affected --target=lint --parallel=true --maxParallel=3 --exclude=llecoop-firebase
+      # Format check
+      - run: npx nx-cloud record -- nx format:check --all
 
-      # Run tests in parallel
-      - name: Test
-        run: yarn nx affected --target=test --parallel=true --maxParallel=3 --exclude=llecoop-firebase
-
-      # Build apps before e2e tests
-      - name: Build Apps
+      # Run affected tasks excluding llecoop-firebase
+      - name: Run Affected Tasks
         run: |
-          export NX_CLOUD_DISTRIBUTED_EXECUTION=false
-          yarn nx affected --target=build --parallel=true --maxParallel=3 --configuration=production
-
-      # Run e2e tests in parallel using Nx Cloud agents
-      - name: E2E Tests
-        run: yarn nx affected --target=e2e-ci --parallel=true --maxParallel=3
-
-      # Stop Nx Cloud agents (this will happen automatically, but explicit is better)
-      - name: Stop Nx Cloud agents
-        if: always()
-        run: npx nx-cloud stop-all-agents
+          npx nx affected --target=lint --exclude=llecoop-firebase --parallel=3
+          npx nx affected --target=test --exclude=llecoop-firebase --parallel=3
+          npx nx affected --target=build --exclude=llecoop-firebase --parallel=3
