--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -107,7 +107,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": ["{workspaceRoot}/coverage/apps/llecoop"],
       "options": {
         "jestConfig": "apps/llecoop/jest.config.ts"
       }
@@ -116,7 +116,7 @@
       "executor": "@nx/web:file-server",
       "options": {
         "buildTarget": "llecoop:build",
-        "staticFilePath": "dist/apps/llecoop/browser"
+        "port": 4201
       }
     }
   }
