fix(llecoop): #544 fix hover link styles
ISSUES CLOSED: #544

--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -4,23 +4,16 @@
   "projectType": "application",
   "prefix": "plastik",
   "sourceRoot": "apps/llecoop/src",
-  "tags": [
-    "scope:llecoop",
-    "type:app"
-  ],
+  "tags": ["scope:llecoop", "type:app"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/llecoop",
         "index": "libs/core/ng-entry-html/util/src/index.html",
         "browser": "apps/llecoop/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "optimization": true,
         "sourceMap": {
           "scripts": true,
@@ -39,17 +32,11 @@
             "output": "/assets/"
           }
         ],
-        "styles": [
-          "apps/llecoop/src/styles/styles.scss"
-        ],
+        "styles": ["apps/llecoop/src/styles/styles.scss"],
         "stylePreprocessorOptions": {
-          "includePaths": [
-            "libs/core/styles/util/material/src"
-          ]
+          "includePaths": ["libs/core/styles/util/material/src"]
         },
-        "allowedCommonJsDependencies": [
-          "moment"
-        ],
+        "allowedCommonJsDependencies": ["moment"],
         "scripts": []
       },
       "configurations": {
@@ -120,9 +107,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/apps/llecoop"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/apps/llecoop"],
       "options": {
         "jestConfig": "apps/llecoop/jest.config.ts"
       }
