--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,6 +36,9 @@
       "@plastik/core/environments": ["libs/core/util/environments/src/index.ts"],
       "@plastik/core/list-view": ["libs/core/table-with-filtering/src/index.ts"],
       "@plastik/core/router-state": ["libs/core/router/data-access/src/index.ts"],
+      "@plastik/llecoop/category-name-cell": [
+        "libs/llecoop/category/ui/category-name-cell/src/index.ts"
+      ],
       "@plastik/llecoop/category/data-access": ["libs/llecoop/category/data-access/src/index.ts"],
       "@plastik/llecoop/category/detail": ["libs/llecoop/category/feature/detail/src/index.ts"],
       "@plastik/llecoop/category/list": ["libs/llecoop/category/feature/list/src/index.ts"],
