feat(llecoop/profile): #575 add basic profile form edit
ISSUES CLOSED: #575

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,6 @@
       "when": "$(basename)"
     }
   },
-  "angular.log": "verbose"
+  "angular.log": "verbose",
+  "nxConsole.nxWorkspacePath": ""
 }
