--- a/package.json
+++ b/package.json
@@ -134,12 +134,13 @@
     "@angular/compiler-cli": "19.2.1",
     "@angular/language-service": "19.2.1",
     "@commitlint/cli": "19.8.0",
-    "@commitlint/config-conventional": "19.8.2",
+    "@commitlint/config-conventional": "19.8.0",
     "@jscutlery/cypress-harness": "^0.7.22",
     "@ngrx/schematics": "19.0.1",
     "@ngrx/store-devtools": "19.0.1",
     "@ngx-formly/schematics": "^6.3.12",
     "@nrwl/cli": "15.9.3",
+    "@nrwl/nx-cloud": "^19.1.0",
     "@nx/cypress": "20.5.0",
     "@nx/esbuild": "20.5.0",
     "@nx/eslint": "20.5.0",
@@ -147,6 +148,7 @@
     "@nx/jest": "20.5.0",
     "@nx/js": "20.5.0",
     "@nx/node": "20.5.0",
+    "@nx/powerpack-license": "^1.2.5",
     "@nx/web": "20.5.0",
     "@nx/workspace": "20.5.0",
     "@schematics/angular": "19.2.1",
