fix(llecoop/user-order/detail): #575 set order userName and address from userStore.loggedUser
load loggedUser on core-cms loading after logging

ISSUES CLOSED: #575

--- a/libs/llecoop/cms-layout/tsconfig.spec.json
+++ b/libs/llecoop/cms-layout/tsconfig.spec.json
@@ -12,6 +12,7 @@
     "src/**/*.spec.ts",
     "src/**/*.d.ts",
     "src/**/*.ts",
-    "../../core/cms-layout/**/*.ts"
+    "../../core/cms-layout/**/*.ts",
+    "../profile/feature/src/lib/profile-feature.routes.ts"
   ]
 }
