--- a/libs/shared/form/util/tsconfig.spec.json
+++ b/libs/shared/form/util/tsconfig.spec.json
@@ -7,9 +7,7 @@
     "composite": true,
     "declaration": true
   },
-  "files": [
-    "src/test-setup.ts"
-  ],
+  "files": ["src/test-setup.ts"],
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
