--- a/libs/llecoop/order-list/ui/user-order-card-detail/project.json
+++ b/libs/llecoop/order-list/ui/user-order-card-detail/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "ui-order-list-orders-status-resume",
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/llecoop/ui/order-list-orders-status-resume/src",
+  "name": "user-order-card-detail",
+  "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/llecoop/order-list/ui/user-order-card-detail/src",
   "prefix": "plastik",
   "projectType": "library",
   "tags": ["type:ui", "scope:llecoop"],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/llecoop/ui/order-list-orders-status-resume/jest.config.ts"
+        "jestConfig": "libs/llecoop/order-list/ui/user-order-card-detail/jest.config.ts"
       }
     },
     "lint": {
