fix(shared/form): #501 add a disable control for shared forms
also set a global token to control enabling/desabling forms during app activity

ISSUES CLOSED: #501

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,11 @@
   "angular.log": "verbose",
   "nxConsole.nxWorkspacePath": "./",
   "nxConsole.enableCodeLens": true,
-  "nxConsole.projectViewingStyle": "automatic"
+  "nxConsole.projectViewingStyle": "automatic",
+  "angular-schematics.schematicsDefaultOptions": {
+    "angular-*": {
+      "style": "scss",
+      "skipStyle": true
+    }
+  }
 }
