--- a/package.json
+++ b/package.json
@@ -85,7 +85,18 @@
     "experimental:http-server": "angular-http-server --path ./dist/apps/experimental --port 8080",
     "preexperimental:a11y": "yarn experimental:build",
     "experimental:a11y": "npm-run-all --parallel --race experimental:http-server experimental:a11y:run",
-    "experimental:a11y:run": "pa11y-ci --config ./apps/experimental/.pa11yci.json"
+    "experimental:a11y:run": "pa11y-ci --config ./apps/experimental/.pa11yci.json",
+    "plastikaweb:serve": "nx run plastikaweb:serve",
+    "plastikaweb:lint": "nx run plastikaweb:lint",
+    "plastikaweb:build": "nx run plastikaweb:build --parallel",
+    "plastikaweb:test": "nx run plastikaweb:test",
+    "plastikaweb:e2e": "nx run plastikaweb-e2e:e2e",
+    "plastikaweb:e2e:local": "yarn nx run plastikaweb-e2e:e2e --browser=firefox --port='cypress-auto' --watch=true",
+    "plastikaweb:http-server": "angular-http-server --path ./dist/apps/plastikaweb --port 8080",
+    "preplastikaweb:a11y": "yarn plastikaweb:build",
+    "plastikaweb:a11y": "npm-run-all --parallel --race plastikaweb:http-server plastikaweb:a11y:run",
+    "plastikaweb:a11y:run": "pa11y-ci --config ./apps/plastikaweb/.pa11yci.json",
+    "plastikaweb:build:github": "nx run plastikaweb:build:prod"
   },
   "private": true,
   "dependencies": {
@@ -102,6 +113,7 @@
     "@angular/platform-browser": "19.2.1",
     "@angular/platform-browser-dynamic": "19.2.1",
     "@angular/router": "19.2.1",
+    "@apollo/client": "^3.13.6",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@ngrx/component": "19.0.1",
@@ -115,9 +127,11 @@
     "@ngx-formly/material": "^6.3.12",
     "@nx/angular": "20.5.0",
     "angular-svg-icon": "^19.0.1",
+    "apollo-angular": "^10.0.3",
     "babel-loader": "^9.2.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.1.1",
+    "graphql": "^16.10.0",
     "moment": "^2.30.1",
     "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
@@ -176,7 +190,7 @@
     "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-deprecation": "^1.5.0",
     "eslint-plugin-jsdoc": "^48.11.0",
     "eslint-plugin-ngrx": "^2.1.4",
