feat(plastikaweb/skills/data-access): #629 add skills graphQL access and plain view
ISSUES CLOSED: #629

--- a/apps/plastikaweb/project.json
+++ b/apps/plastikaweb/project.json
@@ -44,7 +44,13 @@
         "development": {
           "optimization": false,
           "extractLicenses": false,
-          "sourceMap": true
+          "sourceMap": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/plastikaweb/src/environments/environment.ts",
+              "with": "apps/plastikaweb/src/environments/environment.development.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
