--- a/apps/llecoop/tsconfig.editor.json
+++ b/apps/llecoop/tsconfig.editor.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../libs/llecoop/entities/src/llecoop-environment.token.ts"],
   "compilerOptions": {},
   "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
