--- a/libs/shared/firebase-storage/data-access/tsconfig.lib.json
+++ b/libs/shared/firebase-storage/data-access/tsconfig.lib.json
@@ -8,5 +8,9 @@
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../../../llecoop/util/src/firebase-storage/image-kit.service.spec.ts",
+    "../../../llecoop/util/src/firebase-storage/image-kit.service.ts"
+  ]
 }
