--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "llecoop:firebase:functions:deploy:staging": "firebase use default && firebase deploy --only functions",
     "llecoop:firebase:functions:deploy:prod": "firebase use production && firebase deploy --only functions",
     "llecoop:deploy:functions": "yarn llecoop:firebase:functions:build && yarn llecoop:firebase:functions:deploy:staging && yarn llecoop:firebase:functions:deploy:prod",
+    "llecoop:firebase:storage:deploy:staging": "firebase use default && firebase deploy --only storage",
+    "llecoop:firebase:storage:deploy:prod": "firebase use production && firebase deploy --only storage",
+    "llecoop:deploy:storage": "yarn llecoop:firebase:storage:deploy:staging && yarn llecoop:firebase:storage:deploy:prod",
     "llecoop:explore": "source-map-explorer dist/apps/llecoop/browser/**/*.js",
     "experimental:serve": "nx run experimental:serve",
     "experimental:lint": "nx run experimental:lint",
