--- a/libs/shared/storage/data-access/project.json
+++ b/libs/shared/storage/data-access/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "firebase-storage-data-access",
+  "name": "storage-data-access",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/firebase-storage/data-access/src",
+  "sourceRoot": "libs/shared/storage/data-access/src",
   "prefix": "plastik",
   "projectType": "library",
   "tags": ["type:data-access", "scope:shared"],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/firebase-storage/data-access/jest.config.ts"
+        "jestConfig": "libs/shared/storage/data-access/jest.config.ts"
       }
     },
     "lint": {
