--- a/libs/shared/storage/data-access/tsconfig.lib.json
+++ b/libs/shared/storage/data-access/tsconfig.lib.json
@@ -10,7 +10,7 @@
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
   "include": [
     "src/**/*.ts",
-    "../../../llecoop/util/src/firebase-storage/image-kit.service.spec.ts",
-    "../../../llecoop/util/src/firebase-storage/image-kit.service.ts"
+    "../../../../llecoop/util/src/firebase-storage/image-kit.service.spec.ts",
+    "../../../../llecoop/util/src/firebase-storage/image-kit.service.ts"
   ]
 }
