--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -136,6 +136,7 @@
       "@plastik/shared/signal-state-data-access": [
         "libs/shared/signal-state/data-access/src/index.ts"
       ],
+      "@plastik/shared/skip-link": ["libs/shared/util/skip-link/src/index.ts"],
       "@plastik/shared/table/entities": ["libs/shared/table/entities/src/index.ts"],
       "@plastik/shared/table/ui": ["libs/shared/table/ui/src/index.ts"],
       "@plastik/shared/testing": ["libs/shared/testing/index.ts"],
