refactor(llecoop): #488 set activity store with ngrx/signals and cleanup the full repo
ISSUES CLOSED: #488

--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -35,7 +35,7 @@
         "stylePreprocessorOptions": {
           "includePaths": ["libs/core/styles/util/material/src"]
         },
-        "allowedCommonJsDependencies": ["moment"],
+        "allowedCommonJsDependencies": [],
         "scripts": []
       },
       "configurations": {
