perf(nasa-images): #653 remove moment and replace it with date-fns
update the year-picker component to use date-fns material adapter

--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -29,7 +29,7 @@
         "stylePreprocessorOptions": {
           "includePaths": ["libs/core/styles/util/material/src"]
         },
-        "allowedCommonJsDependencies": ["moment"],
+        "allowedCommonJsDependencies": ["date-fns"],
         "scripts": []
       },
       "configurations": {
