--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "@angular/fire": "^19.0.0",
     "@angular/forms": "19.2.1",
     "@angular/material": "19.2.2",
-    "@angular/material-moment-adapter": "19.2.2",
+    "@angular/material-date-fns-adapter": "^19.2.16",
     "@angular/platform-browser": "19.2.1",
     "@angular/platform-browser-dynamic": "19.2.1",
     "@angular/router": "19.2.1",
@@ -133,10 +133,10 @@
     "angular-svg-icon": "^19.0.1",
     "apollo-angular": "^10.0.3",
     "babel-loader": "^9.2.1",
+    "date-fns": "3.6.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.1.1",
     "graphql": "^16.10.0",
-    "moment": "^2.30.1",
     "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
@@ -181,7 +181,6 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/jest": "29.5.14",
     "@types/jest-axe": "^3.5.9",
-    "@types/moment": "^2.13.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
