--- a/libs/llecoop/product/data-access/project.json
+++ b/libs/llecoop/product/data-access/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-access",
+  "name": "llecoop-product-data-access",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/llecoop/product/data-access/src",
   "prefix": "plastik",
