feat(llecoop/user-order-product-list/data-access): #658 add filtering for store products list
ISSUES CLOSED: #658

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -77,6 +77,7 @@
       ],
       "@plastik/llecoop/profile": ["libs/llecoop/profile/feature/src/index.ts"],
       "@plastik/llecoop/profile/data-access": ["libs/llecoop/profile/data-access/src/index.ts"],
+      "@plastik/llecoop/shared/data-access": ["libs/llecoop/shared/data-access/src/index.ts"],
       "@plastik/llecoop/user-order-card": [
         "libs/llecoop/order-list/ui/user-order-card-detail/src/index.ts"
       ],
